# ear_clip

./: CMakeLists.txt  README.md
ear_clip/: CMakeLists.txt  ear_clip.cpp  ear_clip.h
gui/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h  paint_area.cpp  paint_area.h  polygon_builder.cpp  polygon_builder.h  triangulation.cpp  triangulation.h
tests/: CMakeLists.txt  main.cpp  test_util.h
